[package]
name = "samp-mirror"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "SAMP mirror — indexes remarks from Substrate and serves via HTTP"
repository = "https://github.com/samp-org/samp-mirror"

[dependencies]
samp = { path = "../../rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
axum = "0.8"
rusqlite = { version = "0.34", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
